--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.4.1
+  collapsible_sidebar: ^2.0.7
   cupertino_icons: ^1.0.8
   delightful_toast: ^1.1.0
   dio: ^5.9.0
+  easy_sidemenu: ^0.7.1
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.3
@@ -41,6 +43,7 @@ dependencies:
   provider: ^6.1.5+1
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
+  syncfusion_flutter_datagrid_export: ^31.1.19
   text_divider: ^1.0.0
 
 dev_dependencies:
@@ -59,6 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/login_background.png
+    - assets/images/title.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
