--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   easy_sidemenu: ^0.7.1
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
   flutter_screenutil: ^5.9.3
   go_router: ^16.2.1
   intl: ^0.20.2
@@ -45,6 +47,8 @@ dependencies:
   shimmer: ^3.0.0
   syncfusion_flutter_datagrid_export: ^31.1.19
   text_divider: ^1.0.0
+  syncfusion_flutter_datagrid: ^31.1.19
+  giffy_dialog: ^2.3.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
