--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   syncfusion_flutter_datagrid_export: ^31.1.19
   text_divider: ^1.0.0
   syncfusion_flutter_datagrid: ^31.1.19
-  giffy_dialog: ^2.3.0
+  popover: ^0.3.1
+  flutter_smart_dialog: ^4.9.8+9
 
 dev_dependencies:
   flutter_lints: ^5.0.0
