--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   syncfusion_flutter_datagrid: ^31.1.19
   popover: ^0.3.1
   flutter_smart_dialog: ^4.9.8+9
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_lints: ^5.0.0
